Fix spacing between event date and location

--- a/app/assets/stylesheets/dm/components/page_component.scss
+++ b/app/assets/stylesheets/dm/components/page_component.scss
@@ -232,6 +232,11 @@
       &:last-child {
         padding-bottom: 0;
       }
+
+      .event-metadata p {
+        margin-bottom: 0.5rem;
+        margin-top: 0;
+      }
     }
   }
 
